--- a/package.json
+++ b/package.json
@@ -21,14 +21,26 @@
   },
   "homepage": "https://github.com/MayasHaddad/vente",
   "devDependencies": {
+    "babel": "^4.0.0",
+    "babel-loader": "^4.0.0",
+    "css-loader": "~0.9.0",
+    "eslint": "^1.6.0",
+    "eslint-loader": "^1.1.0",
     "jasmine-core": "^2.3.4",
+    "json-loader": "^0.5.3",
+    "jsxhint-loader": "~0.2.0",
     "karma": "^0.13.11",
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.18"
+    "phantomjs": "^1.9.18",
+    "react-hot-loader": "^1.0.7",
+    "style-loader": "~0.8.0",
+    "url-loader": "~0.5.5"
   },
   "dependencies": {
-    "react": "^0.14.0"
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-router": "^1.0.0-rc3"
   }
 }
