--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "flux": "^2.1.1",
+    "immutable": "^3.7.5",
     "react": "^0.14.0",
     "react-burger-menu": "^1.2.3",
     "react-dom": "^0.14.0",
