--- a/package.json
+++ b/package.json
@@ -41,9 +41,12 @@
   "dependencies": {
     "flux": "^2.1.1",
     "immutable": "^3.7.5",
+    "moment": "^2.10.6",
     "react": "^0.14.0",
     "react-burger-menu": "^1.2.3",
+    "react-date-picker": "^3.1.7",
     "react-dom": "^0.14.0",
+    "react-material-alert": "^0.1.3",
     "react-router": "^1.0.0-rc3"
   }
 }
