--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The Vente App. An App that helps sales managers to monitor the commercial activity of the Company. ",
   "main": "index.js",
   "scripts": {
-    "test": "karma test/karma.conf.js"
+    "test": "babel-node test\run.test.js"
   },
   "repository": {
     "type": "git",
