--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "babel": "^4.0.0",
     "babel-loader": "^4.0.0",
+    "chalk": "^1.1.1",
     "css-loader": "~0.9.0",
     "eslint": "^1.6.0",
     "eslint-loader": "^1.1.0",
