--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
+    "node-phonenumber": "^0.2.2",
     "phantomjs": "^1.9.18",
     "react-hot-loader": "^1.0.7",
     "style-loader": "~0.8.0",
