--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "flux": "^2.1.1",
+    "google-libphonenumber": "^1.0.7",
     "immutable": "^3.7.5",
     "moment": "^2.10.6",
     "react": "^0.14.0",
